--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,15 @@
 .App {
   text-align: center;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: white;
+}
+
+#root {
+  height: 100%;
+}
