--- a/frontend/src/components/Message/Message.css
+++ b/frontend/src/components/Message/Message.css
@@ -2,6 +2,13 @@
   padding: 5px 10px 5px 10px;
 }
 
+.personal-message {
+  border: 2px solid #c8cfd3;
+  padding: 10px;
+  margin: 5px 10px 5px 10px;
+  border-radius: 5px;
+}
+
 .user,
 .date {
   color: #c8cfd3;
