--- a/frontend/src/components/LoginScreen/LoginScreen.css
+++ b/frontend/src/components/LoginScreen/LoginScreen.css
@@ -7,10 +7,14 @@
   align-items: center;
 }
 
+.input-container {
+  display: flex;
+  width: 90%;
+}
+
 .input-field {
   margin-top: 10px;
   margin-right: 10px;
-  min-width: 300px;
   border-radius: 5px;
   height: 25px;
   padding: 10px;
@@ -18,6 +22,7 @@
 }
 
 .login-button {
+  margin-top: 10px;
   height: 45px;
   padding: 10px;
   border: none;
